[package]
name = "pltr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-rust = "0.6.2"
pathfinding = "4.3.0"
rand = "0.8.5"
#for parsing datasets:
csv = "1.1.6"
#for parsing datasets:
serde = { version = "1.0", features = ["derive"] }
